--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -11,21 +11,29 @@ pt-BR:
       title: "Perfil: %{user_name}"
       edit: 'Editar perfil'
       department: "Departamento: %{department}"
+  user_sessions:
+    new:
+      title: 'Login'
+      sign_up: 'Cadastre-se'
+      sign_in: 'Login'
   signup_mailer:
     confirm_email:
       subject: 'Ccm - Confirme seu email'
       title: 'Seja bem vindo ao Ccm!'
-    body: |
-      Seja bem vindo ao Ccm, %{full_name}.
-      O Ccm irá ajudar  a mantê-lo informado caso venha a acontecer algum problema 
-      com seu veículo, você será notificado prontamente e de forma discreta.
-    confirm_link_html: 'Para você começar a usar o site, acesse o link: %{link}'
-    thanks_html: 'Obrigado por se cadastrar no %{link}.'
+      body: |
+        Seja bem vindo ao Ccm, %{full_name}.
+        O Ccm irá ajudar  a mantê-lo informado caso venha a acontecer algum problema
+        com seu veículo, você será notificado prontamente e de forma discreta.
+      confirm_link_html: 'Para você começar a usar o site, acesse o link: %{link}'
+      thanks_html: 'Obrigado por se cadastrar no %{link}.'
   links:
     back: Voltar
   layout:
     vehicles: Veículo
     signup: Cadastro
+    signin: Login
+    my_profile: Meu perfil
+    signout: Logout
   general:
     form_error: Há erros no formulário, por favor verifique.
   activerecord:
@@ -45,3 +53,15 @@ pt-BR:
         color: Cor
         type: Tipo de Veículo
         plaque: Placa
+  activemodel:
+    attributes:
+      user_session:
+        email: Email
+        password: Senha
+    errors:
+      messages:
+        invalid_login: 'Usuário ou senha inválidos'
+  helpers:
+    submit:
+      user_session:
+        create: 'Entrar'
